Degree symbol overlapping bug fix

--- a/frontend/src/components/todayBox/index.module.css
+++ b/frontend/src/components/todayBox/index.module.css
@@ -42,8 +42,8 @@
     position: absolute;
     font-size: 2.5rem;
     font-weight: 400;
-    top: 38px;
-    right: -20px;
+    top: 2.2rem;
+    right: -1.7rem;
     opacity: 0.5;
 }
 
